GUI-108 - Prevent header nav from wrapping, min width 500px

--- a/projects/OG-Web/web-engine/prototype/styles/common/og.common.OG-masthead.css
+++ b/projects/OG-Web/web-engine/prototype/styles/common/og.common.OG-masthead.css
@@ -13,6 +13,10 @@
     position: relative;
 }
 
+.OG-masthead ul {
+  white-space: nowrap;
+}
+
 .OG-masthead li {
   display: inline-block;
 }
